# splitfool

./: .gitignore  GITHUB_PUBLICATION.md  MANUAL_TEST_CHECKLIST.md  PHASE_8_SUMMARY.md  README.md  RELEASE_NOTES.md  check_users.py  debug_app.py  main.py  pyproject.toml  simple_table_test.py  test_table_display.py
.github/agents/: copilot-instructions.md
.github/prompts/: speckit.constitution.prompt.md  speckit.specify.prompt.md
.specify/memory/: constitution.md
specs/001-tui-bill-splitter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tui-bill-splitter/checklists/: requirements.md
specs/001-tui-bill-splitter/contracts/: balance_service.py  bill_service.py  user_service.py
splitfool/: __init__.py  __main__.py  config.py
splitfool/db/: connection.py  schema.py
splitfool/db/repositories/: __init__.py  assignment_repository.py  bill_repository.py  item_repository.py  settlement_repository.py  user_repository.py
splitfool/models/: __init__.py  assignment.py  balance.py  bill.py  item.py  settlement.py  user.py
splitfool/services/: balance_service.py  bill_service.py  user_service.py  validation.py
splitfool/ui/: app.py
splitfool/ui/screens/: balance_view.py  bill_entry.py  help.py  history.py  home.py  item_entry.py  user_management.py
splitfool/ui/widgets/: __init__.py  confirmation_dialog.py
splitfool/utils/: currency.py  db_recovery.py  errors.py
src/splitfool/: __main__.py
tests/fixtures/: __init__.py
tests/integration/: test_balance_calculation.py  test_bill_workflow.py  test_repositories.py  test_user_workflow.py
tests/unit/: test_balance_service.py  test_bill_service.py  test_currency.py  test_models.py  test_services.py  test_validation.py
